--- a/nginx/html/telemetry.html
+++ b/nginx/html/telemetry.html
@@ -13,7 +13,7 @@
     <h1>Telemetry</h1>
     <ul>
       <li><a href="/monitor/">Monitor</a></li>
-      <li><a href="/logs/">Logs</a></li>
-      <li><a href="/metrics/">Metrics</a></li>
+      <li><a href="/logs/select/vmui/">Logs</a></li>
+      <li><a href="/metrics/vmui/">Metrics</a></li>
     </ul>
 </article>
