Referece query languages

--- a/nginx/html/telemetry.html
+++ b/nginx/html/telemetry.html
@@ -16,4 +16,9 @@
       <li><a href="/logs/select/vmui/">Logs</a></li>
       <li><a href="/metrics/vmui/">Metrics</a></li>
     </ul>
+    <p>The query languages for logs and metrics are</p>
+    <ul>
+      <li><a href="https://docs.victoriametrics.com/victorialogs/logsql/">LogsQL</a></li>
+      <li><a href="https://docs.victoriametrics.com/victoriametrics/metricsql/">MetricsQL</a></li>
+    </ul>
 </article>
